improve font readability Fixes #295

--- a/css/dark.css
+++ b/css/dark.css
@@ -5,13 +5,6 @@ body {
   background-color: #000000;
   color: #ffffff;
 }
-.navbar {
-	font-weight: 300;
-	text-transform: uppercase;
-}
-.navbar-brand{
-	padding-left: 0px;
-}
 h1 {
   font-family: 'Overpass Mono', monospace;
 	font-weight: 600;
@@ -50,14 +43,14 @@ h1 {
 	background-image: url("https://www.lopp.net/images/bkg-2.webp");
   background-size: cover;
 }
-.well{
+.well {
 	font-size: 11px;
 }
-.btn{
+.btn {
 	background-color: #deb903;
 	border: #deb903;
 }
-.btn:hover{
+.btn:hover {
 	background-color: #808080;
 	border: #808080;
 }
@@ -66,39 +59,49 @@ h1 {
   color: #ffffff;
 }
 .navbar {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.navbar-brand {
+  padding-left: 0px;
+}
+.navbar-brand a:hover {
+  color: #deb903;
+}
+.navbar {
   background-color: #000000;
   color: #ffffff;
   border: 0px;
 }
-.navbar a:link{
+.navbar a:link {
   color: #deb903;
   text-decoration: none;
 }
-.navbar a:hover{
+.navbar a:hover {
   color: #ffffff;
   text-decoration: none;
 }
-.navbar a:active{
+.navbar a:active {
   color: #000000;
   text-decoration: none;
 }
-.navbar a:visited{
+.navbar a:visited {
   color: #ff0000;
   text-decoration: none;
 }
-.navbar li a:link{
+.navbar li a:link {
   color: #deb903;
   text-decoration: none;
 }
-.navbar li a:hover{
+.navbar li a:hover {
   color: #ffffff;
   text-decoration: none;
 }
-.navbar li a:active{
+.navbar li a:active {
   color: #000000;
   text-decoration: none;
 }
-.navbar li a:visited{
+.navbar li a:visited {
   color: #ff0000;
   text-decoration: none;
 }
@@ -107,23 +110,23 @@ h1 {
   color: #ffffff;
   border: 0px;
 }
-a:link{
+a:link {
 	color: #deb903;
 	text-decoration: none;
 }
-a:hover{
+a:hover {
 	color: #ffffff;
 	text-decoration: none;
 }
-a:active{
+a:active {
 	color: #000000;
 	text-decoration: none;
 }
-a:visited{
+a:visited {
 	color: #ff0000;
 	text-decoration: none;
 }
-.date{
+.date {
 	font-size: 10px;
 	color: #626262;
 	letter-spacing: 1px;
