--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,17 @@ body {
 	font-weight: 300;
 	text-transform: uppercase;
 }
-.navbar-brand{
+.navbar-brand {
 	padding-left: 0px;
+}
+.navbar-default .navbar-brand a:hover {
+  color: #deb903;
+}
+#myDefaultNavbar1 a:link {
+  font-weight: normal;
+}
+#myDefaultNavbar1 .active a:link {
+  font-weight: bold;
 }
 h1 {
   font-family: 'Overpass Mono', monospace;
@@ -54,35 +63,35 @@ h1 {
 	background-image: url("https://www.lopp.net/images/bkg-2.webp");
   background-size: cover;
 }
-.well{
+.well {
 	font-size: 11px;
 }
-.btn{
+.btn {
 	background-color: #deb903;
 	border: #deb903;
 }
-.btn:hover{
+.btn:hover {
 	background-color: #808080;
 	border: #808080;
 }
-
-a:link{
+a:link {
 	color: #deb903;
 	text-decoration: none;
+  font-weight: bold;
 }
-a:hover{
+a:hover {
 	color: #000000;
 	text-decoration: none;
 }
-a:active{
+a:active {
 	color: #000000;
 	text-decoration: none;
 }
-a:visited{
+a:visited {
 	color: #ff0000;
 	text-decoration: none;
 }
-.date{
+.date {
 	font-size: 10px;
 	color: #626262;
 	letter-spacing: 1px;
